# psychopy-projects

./: .gitignore  CHANGELOG.md  Experiment.py  README.md  input.csv  instructions.txt  participant-info-questions.csv  participant_info_questions.txt  pyproject.toml  recognize_words.py  results.csv
.github/workflows/: release.yml
experiments/image_sorting/: README.md  __init__.py  trial.py
experiments/image_sorting/input/: instructions-condition-1.txt  instructions-condition-2.txt  instructions-condition-3.txt  participant-info-questions.csv  stimuli-info.csv
experiments/image_sorting/input/images/: CREDITS.md
experiments/image_sorting/sample-data/: participants-summary.csv  sample-id_2021_febr_17_1053.csv
experiments/word_recognition/: README.md  trial.py
experiments/word_recognition/input/: instructions.txt  outro.txt  participant-info-questions.csv  stimuli.csv
experiments/word_recognition/sample-data/: participants-summary.csv  sample-id_2021_febr_10_1241.csv
utils/: Experiment.py  __init__.py
