[tool.poetry]
name = "Psychopy-projects"
version = "0.1.0"
description = "Neuroscience experiments created with the psychopy toolkit."
authors = ["y"]

[tool.poetry.dependencies]
python = "^3.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
